assets/css/style.css
/* ... */
.work-date span,
.course-date span{
    display: block;
    margin: .2rem 0;
    height: 4px;
    max-width: 96%;
}
@media (max-width: 820px){
    .experience,
    .education{
        margin: 3.2rem auto;
    }
    .work-avatar,
    .course-avatar{
        flex: 1;
    }
    .work-date,
    .course-date{
        flex: 1;
        position: absolute;
        top: 3.2rem;
        right: 3.2rem;
    }
    .work-description,
    .course-description{
        order: 2;
        min-width: 100%;
    }
}
@media (max-width: 540px){
    .work-avatar,
    .course-avatar,
    .work-description,
    .course-description,
    .work-date,
    .course-date{
        flex: 1 1 100%;
    }
    .work-avatar,
    .course-avatar{
        display: none;
    }
    .work-date,
    .course-date{
        font-size: 2.8rem;
        font-weight: 700;
        line-height: 3.2rem;
        -webkit-text-stroke-width: 0px;
        position: initial;
    }
    .work-date span,
    .course-date span{
        width: 40%;
    }
}
@media (min-width: 541px){
    .work-date,
    .course-date{
        color: transparent;
    }
}

/*
 * PROJETOS
 */
.portifolio{
    max-width: var(--max-width-layout);
    margin: 64px auto;
    padding: 1.6rem;
}
.project-content{
    display: inline-flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 3.2rem;
}
.project-box{
    flex: 1 1 280px;
    padding: 32px;
    border-radius: 6px;
}
.project-box img{
    border-radius: 4px;
    margin-bottom: 3.2rem;
}
.project-description{
    margin-bottom: 3.2rem;
}
.project-label span{
    font-size: 1.6rem;
    text-transform: uppercase;
    display: inline-block;
    padding: .8rem 1.6rem;
    margin: 1.6rem .8rem 0 0;
    border-style: solid;
    border-width: 0px 0px 2px 0px;
}
.project-btn{
    margin-top: 1.6rem;
}
.project-btn a.btn{
    display: inline-block;
    border-radius: 4px;
    padding: .8rem 1.6rem;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 2rem;
    transition: all .3s;
    margin: .8rem .8rem 0 0;
}
@media (max-width: 880px){
    .portifolio{
        margin: 3.2rem auto;
    }
}


/*
 * FOOTER
 */
.footer{
    font-size: 2rem;
    max-width: var(--max-width-layout);
    padding: 1.6rem;
    margin: 64px auto 1.6rem;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 1.6rem;
}
@media (max-width: 360px){
    .footer{
        flex-direction: column;
        gap: .8rem;
    }
}


/*
 * SCROLL ICON
 */
.scroll{
    opacity: 1;
    position: fixed;
    transition: all .6s ease;
    left: calc(50% - 11px);
    animation: buttonscroll 0.6s ease-in 0s infinite alternate;
}
.scroll-hidden{
    opacity: 0;
    overflow: hidden;
}
.scroll svg{
    max-height: 7.2rem;
}
@keyframes buttonscroll{
    from {
        bottom: 3.2rem;
    }
    to {
        bottom: 2.2rem;
    }
}


/*
 * THEME DARK - DEFAULT
 */
 /* all */
html{
    background: var(--bg-black);
    color: var(--text-white);
}
/* header */
.links a{
    color: var(--text-white);
}
.links a::after{
    background: var(--text-white);
}
.links a:hover{
    color: var(--orange-black);
}
.links a:hover::after{
    background: var(--orange-black);
}
.icon-social{
    background: var(--text-white);
}
.icon-social:hover{
    background: var(--orange-black);
}
/* about */
.about-box{
    background-color: var(--bg-black-box);
    border-bottom: 5px solid var(--orange);
}
.about h2::after{
    background: var(--orange);
}
/* experience */
.experience h2::after{
    background: var(--blue);
}
.work-box{
    background-color: var(--bg-black-box);
    border-bottom: 5px solid var(--blue);
}
.work-date{
    -webkit-text-stroke-color: var(--text-white);
}
@media (max-width: 420px){
    .work-date{
        color: var(--text-white);
    }
}
.work-date span{
    background: var(--blue);
}
.course-date span{
    background: var(--orange);
}
/* education */
.education h2::after{
    background: var(--orange);
}
.course-box{
    background-color: var(--bg-black-box);
    border-bottom: 5px solid var(--orange);
}
.course-date{
    -webkit-text-stroke-color: var(--text-white);
}
@media (max-width: 420px){
    .work-course{
        color: var(--text-white);
    }
}

/* projects */
.portifolio h2::after{
    background: var(--blue);
}
.project-box{
    border-bottom: 5px solid var(--blue);
    background-color: var(--bg-black-box);
}
.project-label span{
    color: var(--text-white);
    border-color: var(--text-white);
    background-color: var(--bg-black);
}
.project-btn .btn{
    color: var(--text-black);
    background-color: var(--bg-white-box);
}
.project-btn .btn:hover{
    background-color: var(--orange-black);
}
.project-box img{
    border: 1px solid rgba(16, 17, 18, .3);
}
/* icon menu mobile */
@media (max-width: 820px) {
    .nav-links.nav-open{
        background-color: var(--bg-black);
    }
    .nav-links.nav-open .links a{
        border-top: 1px solid var(--text-white);
    }
}


/*
 * THEME WHITE
 */
/* all */
html.white-on{
    background: var(--bg-white);
    color: var(--text-black);
}
/* header */
.white-on .links a{
    color: var(--text-black);
}
.white-on .links a::after{
    background: var(--text-black);
}
.white-on .links a:hover{
    color: var(--blue-black);
}
.white-on .links a:hover::after{
    background: var(--blue-black);
}
.white-on .icon-social{
    background: var(--text-black);
}
.white-on .icon-social:hover{
    background: var(--blue-black);
}
/* about */
.white-on .about-box{
    background-color: var(--bg-white-box);
}
/* experience */
.white-on .work-box{
    background-color: var(--bg-white-box);
}
.white-on .work-date{
    -webkit-text-stroke-color: var(--text-black);
}
@media (max-width: 420px){
    .white-on .work-date{
        color: var(--text-black);
    }
}
/* education */
.white-on .course-box{
    background-color: var(--bg-white-box);
}
.white-on .course-date{
    -webkit-text-stroke-color: var(--text-black);
}
/* ... */

